# HighFold_C2C

./: .dockerignore  .env.example  .gitignore  CYCLIC_PEPTIDE_FIX.md  README.md  README_CN.md  colabfold_environment.yml  environment.yml  merge-plan.md  pyproject.toml
alphafold/model/: model.py  modules.py  modules_multimer.py
c2c/: __init__.py  config.py  evaluate.py  generate.py  model.py
colabfold/: batch.py  cycpoem.py  utils.py
colabfold/alphafold/data/: mmcif_parsing.py
database/: init_highfold_tables.sql
docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  docker-manage.sh
docs/: FRONTEND_PARAMETERS.md  HIGHFOLD_TASK_FAILURE_ANALYSIS.md  colabfold-migration.md
scripts/: colabfold_batch  run_pipeline.py  run_predict_only.py
src/highfold_c2c/: __init__.py  __main__.py  app.py
src/highfold_c2c/api/: __init__.py
src/highfold_c2c/config/: __init__.py  logging_config.py  settings.py  storage.py
src/highfold_c2c/core/: __init__.py  async_processor.py  pipeline.py  task_processor.py
src/highfold_c2c/database/: __init__.py  config.py  db.py
src/highfold_c2c/services/: __init__.py
src/highfold_c2c/services/storage/: __init__.py  seaweed_storage.py
tests/: conftest.py  test_pipeline.py  test_storage.py  test_task_processor.py
